[gd_scene load_steps=7 format=3 uid="uid://csn5hvrclonhh"]

[ext_resource type="Script" path="res://scenes/casesimulator/CaseScript.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://hi15sdqfhrl1" path="res://scenes/casesimulator/Sprites/cubuk.png" id="2"]
[ext_resource type="Shader" path="res://shaders/vague.gdshader" id="3_xua0w"]
[ext_resource type="AudioStream" uid="uid://dlrs815vbtwsn" path="res://assets/audio/prize_draw.wav" id="4_f5tii"]
[ext_resource type="AudioStream" uid="uid://dadte0eyxdpy" path="res://assets/audio/rolling_hit.wav" id="5_pplnw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_skdmc"]
shader = ExtResource("3_xua0w")
shader_parameter/lod = 1.0
shader_parameter/center = Vector2(0.5, 0.5)
shader_parameter/size = Vector2(0.3, 0.34)

[node name="CaseOpening" type="Control"]
z_index = 99
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="CaseScrollContainer" type="ScrollContainer" parent="."]
clip_contents = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -126.0
offset_right = 512.0
offset_bottom = 126.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemContainer" type="HBoxContainer" parent="CaseScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ItemCursor" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -125.0
offset_right = 3.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.09
autostart = true

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -111.0
offset_top = -179.0
offset_right = 111.0
offset_bottom = -121.0
grow_horizontal = 2
grow_vertical = 0
text = "继续"

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -125.0
offset_right = 125.0
offset_bottom = 125.0
pivot_offset = Vector2(125, 125)

[node name="background_vague" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_skdmc")
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2

[node name="get_prize" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_f5tii")

[node name="rolling_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_pplnw")

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_ButtonPanel_pressed"]
